# peppermint-matrix

./: .gitignore  README.md  hyperparameter_search.py  main.py  pyproject.toml  sync_wandb.py
configs/: default.yaml
configs/hyperparameter_search/: baseline_matrix_factorization.yaml  mf:elasticnet.yaml  mf:lasso.yaml
configs/single_runs/: baseline_matrix_factorization.yaml
notebooks/: adjust_wandb.ipynb  lightgcn.ipynb  line_fitting.ipynb  matrix_factorization.ipynb  unified_training_flow.ipynb
notebooks/parameter_analysis/: matrix_factorization.ipynb  mf:regularization.ipynb  sanity_checks.ipynb
notebooks/sandbox/: data_loading.ipynb  linear_regression.ipynb  linear_regression.tf.ipynb  model_loading.ipynb  read_config.ipynb  read_optimal_config.ipynb  wandb_graphql.ipynb
notebooks/sandbox/results/: linear_regression.numpy.result.json  linear_regression.tfadam.result.json  linear_regression.tfbase.result.json
src/: constant.py
src/baremetal/: __init__.py
src/losses/: bayesian_personalized_ranking.py
src/models/: matrix_factorization.py
src/preprocessing/: __init__.py  data_loader.py
src/sampler/: __init__.py
src/tracker/: wandb.py
src/utils/: __init__.py  config.py
src/visualization/: __init__.py
wandb/: adjust.py  sync.py
