[project]
name = "peppermint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "nvidia-cuda-runtime-cu12>=12.9.79; platform_system == 'Linux'",
    "nvidia-cudnn-cu12>=9.3; platform_system == 'Linux'",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
